2011-04-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix snippets bug: {ob}pc{cb} replaced by '%' instead of {pc}.
   Refactor snippets_make_replacements() using geany_cursor_marker.


2011-04-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/editor.c:
   Avoid triggering autocompletion on PHP open tags (closes #3199442).


2011-04-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Update dox for document_compare_by_display_name() with warning
   about parameter addresses.
 * src/document.h:
   Use brackets for DOC_FILENAME() macro 'doc' argument.
 * src/templates.c, src/utils.c, src/toolbar.c, src/utils.h,
   src/keyfile.c, src/filetypes.c, src/editor.c, src/symbols.c:
   Make utils_build_path() return a copy for safety.
 * src/keybindings.c:
   Fix Ctrl-Shift-[CV] keybindings to work outside the VTE.


2011-04-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Fix wrong casting of array pointers, thanks Nick.
 * src/plugindata.h, src/callbacks.c, src/document.c, src/plugins.c,
   src/document.h:
   Rename document_sort_by_display_name() into
   document_compare_by_display_name(), thanks again Nick.


2011-04-11  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/document.h, src/editor.c, src/keybindings.c:
   Revert r5642 "Don't update parent WorkObjects when updating one in
   real-time" because it broke calltips.


2011-04-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Update path when saving a new document for the first time if the
   follow path option is enabled.
 * src/about.c, src/keyfile.c, THANKS:
   Store VTE path with the session (based on patch by Nicolas
   Sierro, thanks).
   There's still a bug with loading a project at startup; closing the
   project doesn't restore old VTE path.
 * src/filetypes.c, src/filetypes.h:
   Refactor with filetypes_get_filename().